--- a/src/ui/fxmlFiles/MainScreen.fxml
+++ b/src/ui/fxmlFiles/MainScreen.fxml
@@ -2,26 +2,44 @@
 
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="22.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <MenuBar>
               <menus>
-                <Menu mnemonicParsing="false" onAction="#loadTableView" text="Tabla" />
-                  <Menu mnemonicParsing="false" onAction="#loadAdjustScreen" text="Ajuste" />
-                <Menu mnemonicParsing="false" onAction="#loadDataScreen" text="Cargar datos" />
+                <Menu mnemonicParsing="false" text="Tabla">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#loadTableView" text="Ver tabla" />
+                     </items></Menu>
+                  <Menu mnemonicParsing="false" text="Ajuste">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#loadAdjustScreen" text="Hacer ajuste" />
+                     </items></Menu>
+                <Menu mnemonicParsing="false" text="Cargar datos">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#loadDataScreen" text="Subir datos" />
+                     </items></Menu>
               </menus>
             </MenuBar>
          </children>
       </VBox>
    </top>
    <center>
-      <AnchorPane prefHeight="350.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="350.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="262.0" fitWidth="267.0" layoutX="169.0" layoutY="82.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/contabilidad2.png" />
+               </image>
+            </ImageView>
+         </children></AnchorPane>
    </center>
 </BorderPane>
